# markdown-vfs-mcp-server

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: engine.rs  lib.rs
core/tests/: engine_tests.rs
server/: README.md  eslint.config.mjs  package.json  tsconfig.json
server/src/: core_facade.ts  index.ts
test-data/: large-book.md
